--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "play-connect-four",
+  "name": "tic-tac-toe-and-the-fifteen-game",
+  "homepage": "http://nolastemgarden.github.io/tic-tac-toe-and-the-fifteen-game",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "4.9.14",
+    "@material-ui/icons": "4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "2.2.0"
   }
 }
